# agora-mining

./: Cargo.toml  Makefile  README.md  dev.env  docker-compose.yml
documentation/: Entwicklerdokumentation.md  Installationsdokumentation.md  Konzept.md  Kostenplanung_Projekt_LF12a.xls  Projektdokumentation.md  criteria.md
documentation/User Storys/: Anzeigen aller Datensätze.md  Daten in DBS speichern  Nachträgliches Hinzufügen von Daten  Stromerzeugung anzeigen.md  User Story 1.md
documentation/resources/: ERM.drawio
migrations/: 20240110111441_power_generation_and_consumption.sql  20240228100958_power_emission.sql  20240314110331_power_import_and_export.sql
src/: agora.rs  config.rs  database.rs  main.rs  plotting.rs  templates.rs
src/database/: agora_entities.rs  power_emission.rs  power_generation.rs  power_generation_and_consumption.rs  power_import_export.rs
src/templates/: plotting.rs
templates/: base.html  base.scss  hello_agora.html  hello_agora.scss
templates/about/: about.html  about.scss
templates/base/: base.html  base.scss
templates/landingpage/: landingpage.html  landingpage.scss
templates/plotting/: plotting.html  plotting.scss
variables/: color.scss
