[package]
name = "agora-mining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7"
axum-extra = { version = "0.9.2", features = ["query"] }
dotenv = "0.15.0"
eyre = "0.6.11"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde-env = "0.1.1"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "time", "postgres"] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-human-readable", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
turf = "0.7.0"

[package.metadata.turf]
load_paths = ["variables"]
minify = false
class_names.template = "agora-mining_<original_name>_<id>"
class_names.excludes = ["htmx-.*"]

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]
